--- a/Shitcord/Shitcord.csproj
+++ b/Shitcord/Shitcord.csproj
@@ -11,6 +11,8 @@
         <Content Include="Resources/*">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </Content>
+        <PackageReference Include="DSharpPlus.Interactivity" Version="4.1.0" />
+        <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Scripting" Version="4.1.0" />
 
         <PackageReference Include="SSH.NET" Version="2020.0.1" />
     </ItemGroup>
