--- a/Shitcord/Shitcord.csproj
+++ b/Shitcord/Shitcord.csproj
@@ -13,8 +13,7 @@
         </Content>
         <PackageReference Include="DSharpPlus.Interactivity" Version="4.1.0" />
         <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Scripting" Version="4.1.0" />
-        <PackageReference Include="Microsoft.Data.Sqlite.Core" Version="6.0.6" />
-
+        <PackageReference Include="Microsoft.Data.Sqlite" Version="6.0.6" />
         <PackageReference Include="SSH.NET" Version="2020.0.1" />
     </ItemGroup>
 
