Added seek command.

--- a/Shitcord/Shitcord.csproj
+++ b/Shitcord/Shitcord.csproj
@@ -11,7 +11,11 @@
         <Content Include="Resources/*">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </Content>
-        <PackageReference Include="DSharpPlus.Interactivity" Version="4.1.0" />
+
+        <Content Include="../Software/*">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </Content>
+
         <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Scripting" Version="4.1.0" />
         <PackageReference Include="Microsoft.Data.Sqlite" Version="6.0.6" />
         <PackageReference Include="SSH.NET" Version="2020.0.1" />
@@ -19,6 +23,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\DSharpPlus\DSharpPlus.CommandsNext\DSharpPlus.CommandsNext.csproj" />
+      <ProjectReference Include="..\DSharpPlus\DSharpPlus.Interactivity\DSharpPlus.Interactivity.csproj" />
       <ProjectReference Include="..\DSharpPlus\DSharpPlus.Lavalink\DSharpPlus.Lavalink.csproj" />
       <ProjectReference Include="..\DSharpPlus\DSharpPlus\DSharpPlus.csproj" />
     </ItemGroup>
