--- a/Shitcord/Shitcord.csproj
+++ b/Shitcord/Shitcord.csproj
@@ -13,21 +13,23 @@
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </Content>
 
-        <Content Include="../Software/*">
+        <Content Include="../External/*">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </Content>
 
+        <!-- Nuget dependencies -->
         <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Scripting" Version="4.1.0" />
         <PackageReference Include="Microsoft.Data.Sqlite" Version="6.0.6" />
         <PackageReference Include="SSH.NET" Version="2020.0.1" />
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\DSharpPlus\DSharpPlus.CommandsNext\DSharpPlus.CommandsNext.csproj" />
-      <ProjectReference Include="..\DSharpPlus\DSharpPlus.Interactivity\DSharpPlus.Interactivity.csproj" />
-      <ProjectReference Include="..\DSharpPlus\DSharpPlus.Lavalink\DSharpPlus.Lavalink.csproj" />
-      <ProjectReference Include="..\DSharpPlus\DSharpPlus.Rest\DSharpPlus.Rest.csproj" />
-      <ProjectReference Include="..\DSharpPlus\DSharpPlus\DSharpPlus.csproj" />
+        <!-- Local dependencies -->
+        <ProjectReference Include="..\DSharpPlus\DSharpPlus.CommandsNext\DSharpPlus.CommandsNext.csproj" />
+        <ProjectReference Include="..\DSharpPlus\DSharpPlus.Interactivity\DSharpPlus.Interactivity.csproj" />
+        <ProjectReference Include="..\DSharpPlus\DSharpPlus.Lavalink\DSharpPlus.Lavalink.csproj" />
+        <ProjectReference Include="..\DSharpPlus\DSharpPlus.Rest\DSharpPlus.Rest.csproj" />
+        <ProjectReference Include="..\DSharpPlus\DSharpPlus\DSharpPlus.csproj" />
     </ItemGroup>
 
 </Project>
