--- a/Shitcord/Shitcord.csproj
+++ b/Shitcord/Shitcord.csproj
@@ -21,6 +21,7 @@
         <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Scripting" Version="4.1.0" />
         <PackageReference Include="Microsoft.Data.Sqlite" Version="6.0.6" />
         <PackageReference Include="SSH.NET" Version="2020.0.1" />
+        <PackageReference Include="NLua" Version="1.6.2" />
     </ItemGroup>
 
     <ItemGroup>
