--- a/Shitcord/Shitcord.csproj
+++ b/Shitcord/Shitcord.csproj
@@ -30,6 +30,7 @@
         <ProjectReference Include="..\DSharpPlus\DSharpPlus.Interactivity\DSharpPlus.Interactivity.csproj" />
         <ProjectReference Include="..\DSharpPlus\DSharpPlus.Lavalink\DSharpPlus.Lavalink.csproj" />
         <ProjectReference Include="..\DSharpPlus\DSharpPlus.Rest\DSharpPlus.Rest.csproj" />
+        <ProjectReference Include="..\DSharpPlus\DSharpPlus.SlashCommands\DSharpPlus.SlashCommands.csproj" />
         <ProjectReference Include="..\DSharpPlus\DSharpPlus\DSharpPlus.csproj" />
     </ItemGroup>
 
